# mini-crm

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 001_initial.py  788be59d5b46_initial.py
app/: __init__.py  config.py  database.py  main.py
app/auth/: __init__.py  dependencies.py  router.py  utils.py
app/models/: __init__.py  activity.py  company.py  contact.py  deal.py  deal_stage.py  deal_tag.py  tag.py  user.py
app/routers/: activities.py  companies.py  contacts.py  deals.py  pipeline.py  tags.py
app/schemas/: activity.py  company.py  contact.py  deal.py  tag.py
app/services/: deal_service.py
app/templates/: base.html  contacts.html  dashboard.html  deal_detail.html  deals.html
docs/plan/: demo-repo-howto.md  demo-repo-spec.md
scripts/: check_python.py  reset_db.py  seed.py
static/: app.js  style.css
tests/: conftest.py  test_activities.py  test_auth.py  test_companies.py  test_contacts.py  test_deals.py  test_pipeline.py  test_tags.py
